adding of student

--- a/src/imaster-client/webapp/app/components/student/student.list.html
+++ b/src/imaster-client/webapp/app/components/student/student.list.html
@@ -2,6 +2,9 @@
     <table class="table">
         <caption>
             <h3>Students</h3>
+            <ul class="block--right">
+                <li><a ui-sref="student-add">Add</a></li>
+            </ul>
         </caption>
         <thead>
             <tr>
