--- a/src/imaster-client/webapp/app/components/login/login.html
+++ b/src/imaster-client/webapp/app/components/login/login.html
@@ -1,11 +1,11 @@
 <div class="form--default">
     <div class="form__row">
         <label for="label-login" class="form__control">Username</label>
-        <input id="label-login" class="form__control" ng-model="vm.username">
+        <input id="label-login" class="form__control" name="password" ng-model="vm.username">
     </div>
     <div class="form__row">
         <label for="label-password" class="form__control">Password</label>
-        <input id="label-password" class="form__control" ng-model="vm.password">
+        <input id="label-password" class="form__control" name="password" ng-model="vm.password">
     </div>
     <button ng-click="vm.login()" class="block--right button button--login">Login</button>
 </div>
