improved style, added icons

--- a/src/imaster-client/webapp/app/components/student/student.html
+++ b/src/imaster-client/webapp/app/components/student/student.html
@@ -1,4 +1,5 @@
 <form class="form--default">
+    <h3 class="form__legend text--left">Учащийся</h3>
     <div class="form__row">
         <label for="label-firstName" class="form__control">Имя</label>
         <input id="label-firstName" class="form__control" name="firstName" ng-model="vm.student.firstName">
