improved styles and views

--- a/src/imaster-client/webapp/app/components/student/student.list.html
+++ b/src/imaster-client/webapp/app/components/student/student.list.html
@@ -9,13 +9,13 @@
         </caption>
         <thead>
             <tr>
-                <td class="table__column--numbering">#</td>
-                <td class="table__column--checking"></td>
-                <td>Имя</td>
-                <td>Фамилия</td>
-                <td>Отчество</td>
-                <td>Возраст</td>
-                <td></td>
+                <th class="table__column--numbering">#</th>
+                <th class="table__column--checking"></th>
+                <th>Имя</th>
+                <th>Фамилия</th>
+                <th>Отчество</th>
+                <th>Возраст</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
