student's property age replaced on birthday

--- a/src/imaster-client/webapp/app/components/student/student.list.html
+++ b/src/imaster-client/webapp/app/components/student/student.list.html
@@ -14,7 +14,7 @@
                 <th>Имя</th>
                 <th>Фамилия</th>
                 <th>Отчество</th>
-                <th>Возраст</th>
+                <th>Год рождения</th>
                 <th></th>
             </tr>
         </thead>
@@ -25,7 +25,7 @@
                 <td>{{student.firstName}}</td>
                 <td>{{student.lastName}}</td>
                 <td>{{student.patronymic}}</td>
-                <td>{{student.age}}</td>
+                <td>{{student.birthday}}</td>
                 <td><span ng-click="vm.edit(student)" class="icon--edit" title="Изменить"></span></td>
             </tr>
         </tbody>
