editing of student was added

--- a/src/imaster-client/src/app/components/student/student.html
+++ b/src/imaster-client/src/app/components/student/student.html
@@ -9,8 +9,8 @@
         <input id="label-lastName" class="form__control" name="lastName" ng-model="vm.student.lastName">
     </div>
     <div class="form__row">
-        <label for="label-age" class="form__control">Год рождения</label>
-        <input id="label-age" class="form__control" name="age" ng-model="vm.student.age">
+        <label for="label-birthday" class="form__control">Год рождения</label>
+        <input id="label-birthday" class="form__control" name="age" ng-model="vm.student.birthday">
     </div>
     <button class="block--right button button--success" ng-click="vm.cancel()">Отмена</button>
     <button class="block--right button button--warning" ng-click="vm.save()">Сохранить</button>
