--- a/src/imaster-client/src/app/components/student/student-list.html
+++ b/src/imaster-client/src/app/components/student/student-list.html
@@ -26,7 +26,7 @@
                 <td>{{student.lastName}}</td>
                 <td>{{student.patronymic}}</td>
                 <td>{{student.birthday}}</td>
-                <td><span ng-click="vm.edit(student)" class="icon--edit" title="Изменить"></span></td>
+                <td><span ui-sref="student-edit({id: {{student.id}}})" class="icon--edit" title="Изменить"></span></td>
             </tr>
         </tbody>
     </table>
