--- a/src/imaster-client/src/app/components/login/login.html
+++ b/src/imaster-client/src/app/components/login/login.html
@@ -1,5 +1,5 @@
 <form class="form--login">
-    <h3 class="form__legend text--left">Вход</h3>
+    <h3 class="form__legend">Вход</h3>
     <div class="form__row">
         <label for="label-login" class="form__control">Имя</label>
         <input id="label-login" class="form__control" name="password" ng-model="vm.username">
@@ -8,6 +8,8 @@
         <label for="label-password" class="form__control">Пароль</label>
         <input id="label-password" class="form__control" name="password" ng-model="vm.password">
     </div>
-    <button ng-click="vm.login()" class="block--right button--success">Войти</button>
-    <button ng-click="vm.cancel()" class="block--right button--warning">Назад</button>
+    <div class="form__row">
+        <button ng-click="vm.login()" class="block--right button--success">Войти</button>
+        <button ng-click="vm.cancel()" class="block--right button--warning">Назад</button>
+    </div>
 </form>
