added form for essay

--- a/src/imaster-client/src/app/components/essay/essay.html
+++ b/src/imaster-client/src/app/components/essay/essay.html
@@ -6,8 +6,8 @@
             <input id="label-essay-title" form="label-essay-title" class="form__control" ng-model="vm.essay.title">
         </div>
             <div class="form__row form__row--inline">
-                <label for="label-essay-file" class="form__control">Файл:</label>
-                <input id="label-essay-file" type="file" nv-file-select="" uploader="vm.uploader" />
+                <label for="label-essay-file" class="form__control">Реферат:</label>
+                <input id="label-essay-file" type="file" nv-file-select uploader="vm.uploader" />
             </div>
         <div class="form__row">
             <label for="label-essay-comment" class="form__control">Комментарий:</label>
