--- a/src/imaster-client/src/resources/stylesheets/forms.scss
+++ b/src/imaster-client/src/resources/stylesheets/forms.scss
@@ -20,7 +20,6 @@
 .form__control {
   padding: 8px 5px;
   margin: 5px;
-  float: left;
   width: $width--12;
 }
 
@@ -32,9 +31,10 @@
 }
 
 .form__row--inline {
-  .form__control {
-    display: inline-block;
-    width: auto;
+  text-align: left;
+  label.form__control {
+    margin-right: 3em;
+    display: inline;
   }
 }
 
@@ -59,6 +59,7 @@ textarea.form__control {
 }
 
 label.form__control {
+  display: inline-block;
   font-weight: bold;
   text-align: left;
   vertical-align: middle;
