added patronymic field to student form

--- a/src/imaster-client/src/app/components/student/student.html
+++ b/src/imaster-client/src/app/components/student/student.html
@@ -5,8 +5,12 @@
         <input id="label-firstName" class="form__control" name="firstName" ng-model="vm.student.firstName">
     </div>
     <div class="form__row">
-        <label for="label-lastName" class="form__control">Отчество</label>
+        <label for="label-lastName" class="form__control">Фамилия</label>
         <input id="label-lastName" class="form__control" name="lastName" ng-model="vm.student.lastName">
+    </div>
+    <div class="form__row">
+        <label for="label-patronymic" class="form__control">Отчество</label>
+        <input id="label-patronymic" class="form__control" name="lastName" ng-model="vm.student.patronymic">
     </div>
     <div class="form__row">
         <label for="label-birthday" class="form__control">Год рождения</label>
