fixed inline style for row

--- a/src/imaster-client/src/app/components/essay/essay.html
+++ b/src/imaster-client/src/app/components/essay/essay.html
@@ -6,17 +6,19 @@
             <input id="label-essay-title" form="label-essay-title" class="form__control" ng-model="vm.essay.title">
         </div>
         <div class="form__row form__row--inline">
-            <label for="label-essay-status" class="form__control">Статус:</label>
-            <select id="label-essay-status" name="status" ng-model="vm.essay.status">
-                <option selected>Новый</option>
-                <option selected>На проверке</option>
-                <option selected>Требует исправлений</option>
-                <option selected>Сдан</option>
-            </select>
+            <div>
+                <label for="label-essay-file" class="form__control">Реферат:</label>
+                <input id="label-essay-file" type="file" nv-file-select uploader="vm.uploader"/>
+            </div>
         </div>
-        <div class="form__row form__row--inline">
-            <label for="label-essay-file" class="form__control">Реферат:</label>
-            <input id="label-essay-file" type="file" nv-file-select uploader="vm.uploader"/>
+        <div class="form__row--inline">
+            <label for="label-essay-status" class="form__control">Статус:</label>
+            <select id="label-essay-status"class="form__control" name="status" ng-model="vm.essay.status">
+                <option selected="selected">Новый</option>
+                <option>На проверке</option>
+                <option>Требует исправлений</option>
+                <option>Сдан</option>
+            </select>
         </div>
         <div class="form__row">
             <label for="label-essay-comment" class="form__control">Комментарий:</label>
