--- a/src/imaster-client/src/app/components/student/student.html
+++ b/src/imaster-client/src/app/components/student/student.html
@@ -1,18 +1,18 @@
 <form class="form--default">
     <h3 class="form__legend text--left">Учащийся</h3>
-    <div class="form__row">
+    <div class="form__row--inline">
         <label for="label-firstName" class="form__control">Имя</label>
         <input id="label-firstName" class="form__control" name="firstName" ng-model="vm.student.firstName">
     </div>
-    <div class="form__row">
+    <div class="form__row--inline">
         <label for="label-lastName" class="form__control">Фамилия</label>
         <input id="label-lastName" class="form__control" name="lastName" ng-model="vm.student.lastName">
     </div>
-    <div class="form__row">
+    <div class="form__row--inline">
         <label for="label-patronymic" class="form__control">Отчество</label>
         <input id="label-patronymic" class="form__control" name="lastName" ng-model="vm.student.patronymic">
     </div>
-    <div class="form__row">
+    <div class="form__row--inline">
         <label for="label-birthday" class="form__control">Год рождения</label>
         <input id="label-birthday" class="form__control" name="age" ng-model="vm.student.birthday">
     </div>
