--- a/src/imaster-client/src/app/components/login/login.html
+++ b/src/imaster-client/src/app/components/login/login.html
@@ -1,10 +1,10 @@
 <form class="form--login">
     <h3 class="form__legend">Вход</h3>
-    <div class="form__row">
+    <div class="form__row--inline">
         <label for="label-login" class="form__control">Имя</label>
         <input id="label-login" class="form__control" name="password" ng-model="vm.username">
     </div>
-    <div class="form__row">
+    <div class="form__row--inline">
         <label for="label-password" class="form__control">Пароль</label>
         <input id="label-password" class="form__control" name="password" ng-model="vm.password">
     </div>
