added teacher field to essay's form

--- a/src/imaster-client/src/app/components/essay/essay.html
+++ b/src/imaster-client/src/app/components/essay/essay.html
@@ -11,11 +11,18 @@
         </div>
         <div class="form__row--inline">
             <label for="label-essay-status" class="form__control">Статус:</label>
-            <select id="label-essay-status"class="form__control" name="status" ng-model="vm.essay.status">
-                <option selected="selected">Новый</option>
+            <select id="label-essay-status" class="form__control" name="status" ng-model="vm.essay.status">
+                <option ng-selected="true">Новый</option>
                 <option>На проверке</option>
                 <option>Требует исправлений</option>
                 <option>Сдан</option>
+            </select>
+        </div>
+        <div class="form__row--inline">
+            <label for="label-essay-teacher" class="form__control">Проверяющий:</label>
+            <select id="label-essay-teacher" class="form__control" name="teacher"
+                    ng-options = "t as t.firstName for t in vm.teachers track by t.id"
+                    ng-model="vm.essay.teacher">
             </select>
         </div>
         <div class="form__row--inline">
